--- a/src/site/_includes/layouts/main.njk
+++ b/src/site/_includes/layouts/main.njk
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title or metadata.title }}</title>
+
+    {%- set css -%}
+      {% include "../../_style/vars.css" %}
+      {% include "../../_style/main.css" %}
+      {% include "../../_style/utils.css" %}
+    {%- endset -%}
+
+    <style>
+      {{ css | cssmin | safe }}
+    </style>
+
     {# <link rel="shortcut icon" href="/favicon.png"/>
     <meta name="description" content="{{ description or metadata.description }}">
     <meta property="og:title" content="{{ title or metadata.title }}">
@@ -17,32 +28,11 @@
       <meta property="og:image" content="{{ og_image | absoluteUrl }}">
       <meta name="twitter:image" content="{{ og_image | absoluteUrl}}">
     {% endif -%}
-
-    <link rel="stylesheet" href="{{ '/main.css' | url }}">
-    {%- if article_stylesheet -%}
-      {%- set css %}
-      {%- include '../../articles/' + article_stylesheet -%}
-      {%- endset %}
-      <style>
-        {{css | cssmin | safe}}
-      </style>
-    {% endif -%}
-    <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
-    <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}"> #}
+     #}
   </head>
   <body>
-    {# {% include './partials/page-header.njk' %} #}
-
     <main>
-      {# {%- if layout == 'base' -%}
-        <h1 class="page-title">{{ title }}</h1>
-      {%- endif -%} #}
-
-      <div>
-        {{ content | safe }}
-      </div>
-
+      {{ content | safe }}
     </main>
-
   </body>
 </html>
