--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -3,93 +3,34 @@ layout: layouts/main.njk
 title: homepage
 ---
 
-<style>
-  * {
-    box-sizing: border-box;
-  }
-  html {
-    font-family: sans-serif;
-  }
-  body {
-    background: #eee;
-  }
-  main {
-    max-width: 1366px;
-    margin-inline: auto;
-  }
-  .card {
-    display: block;
-    height: 100%;
-    text-decoration: none;
-    padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    background: #fff;
-    transition: box-shadow 0.2s;
-  }
-  .card:hover {
-    border-color: #ccc #aaa #999;
-    box-shadow: 0 4px 8px #777;
-  }
-  .descr {
-    margin-top: 1rem;
-    color: #333;
-  }
-  .favicon {
-    width: 16px;
-    height: auto;
-    vertical-align: middle;
-  }
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  .thumb {
-    display: block;
-    max-height: 180px;
-    width: auto;
-    margin-top: 1rem;
-    margin-inline: auto;
-  }
-  ul {
-    display: grid;
-    grid-gap: 16px;
-    grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
-    grid-auto-rows: minmax(150px,auto);
-    margin: 0;
-    padding: 0;
-  }
-  li {
-    margin: 0;
-    display: block;
-  }
-</style>
-
-<h1>Miniature makers</h1>
+<h1>Display Miniature makers</h1>
 
 <p>
-  A curated list of non-gaming (or not exclusively gaming) display miniature makers.
+  A curated list of non-gaming (or not exclusively gaming) display miniature makers. Physical models 54mm and up.
 </p>
 
 <ul>
 {%- for site in sites %}
   <li>
     <a class="card" href="{{ site.computedUrl }}">
-      {%- if site.favicon -%}
-        <img class="favicon" src="{{ site.favicon }}" alt="" width="16" />
-      {%- endif -%}
-      
-      <strong> {{ site.curated.title }}</strong>
+      <div class="card-header">
+        <strong> {{ site.curated.title }}</strong>
 
+        {%- if site.favicon -%}
+          <img class="favicon" src="{{ site.favicon | replace('http://', 'https://') }}" alt="" width="16" />
+        {%- endif -%}
+      </div>
       
       {% if site.description %}
-        <div class="descr">
+        <div class="card-descr">
           {{ site.description }}
         </div>
       {% endif %}
 
       {% if site.computedImage %}
-        <img class="thumb" src="{{ site.computedImage }}" alt="" />
+        <img class="card-thumb" src="{{ site.computedImage | replace('http://', 'https://') }}" alt="" />
+      {% else %}
+        <div class="card-thumb card-text-thumb">{{ site.curated.title }}</div>
       {% endif %}
 
     </a>
