get data from google sheet

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -34,14 +34,14 @@ title: homepage
       {% endif %}
 
     </a>
-    <textarea hidden>
+    {# <textarea hidden>
       {{ site | dump | safe }}
-    </textarea>
+    </textarea> #}
   </li>
 {% endfor -%}
 </ul>
 
 
-<textarea hidden>
+{# <textarea hidden>
   {{ sites | dump | safe }}
-</textarea>
+</textarea> #}
