shoutout to the paintwater soup podcast, discord and members

--- a/src/site/_style/main.css
+++ b/src/site/_style/main.css
@@ -104,3 +104,12 @@ li {
   margin: 0;
   display: block;
 }
+
+.app-footer {
+  padding: 2rem 0 0;
+  font-size: 14px;
+}
+
+.app-footer p {
+  margin: 0
+}
