--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -1,9 +1,9 @@
 ---
 layout: layouts/main.njk
-title: homepage
+title: Display miniature makers
 ---
 
-<h1>Display Miniature makers</h1>
+<h1>Display miniature makers</h1>
 
 <p>
   A curated list of non-gaming (or not exclusively gaming) display miniature makers. Physical models 54mm and up.
@@ -41,6 +41,9 @@ title: homepage
 {% endfor -%}
 </ul>
 
+<div class="app-footer">
+  <p>Maintained by some of the awesome folks on <a target="_blank" href="https://discord.gg/swjbX5EAUE">the Discord server</a> of the <a target="_blank" href="https://www.youtube.com/@PWS_podcast">Paintwater Soup Podcast</a>.<p>
+</div>
 
 {# <textarea hidden>
   {{ sites | dump | safe }}
